crates/toml/tests/snapshots/invalid/table/dot.stderr
TOML parse error at line 1, column 2
  |
1 | [.]
  |  ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`

---
TOML parse error at line 1, column 3
  |
1 | [.]
  |   ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
